<resources>
    <string name="app_name">vendApp</string>

    <!-- Main Menu Fragment -->
    <string name="mainmenu_title">@string/app_name</string>
    <string name="mainmenu_products_button">Products</string>
    <string name="mainmenu_customers_button">Customers</string>
    <string name="mainmenu_orders_button">Orders</string>
    <string name="mainmenu_no_data_available_chart">No data available</string>
    <string name="mainmenu_orders_bi_title">%s\'s orders</string>
    <string name="mainmenu_orders_bi_defaulttitle">Orders</string>
    <string name="mainmenu_january">January</string>
    <string name="mainmenu_february">February</string>
    <string name="mainmenu_march">March</string>
    <string name="mainmenu_april">April</string>
    <string name="mainmenu_may">May</string>
    <string name="mainmenu_june">June</string>
    <string name="mainmenu_july">July</string>
    <string name="mainmenu_august">August</string>
    <string name="mainmenu_september">September</string>
    <string name="mainmenu_october">October</string>
    <string name="mainmenu_november">November</string>
    <string name="mainmenu_december">December</string>
    <string name="mainmenu_orders_bi_manycount">%s orders</string>
    <string name="mainmenu_orders_bi_singlecount">%s order</string>
    <string name="mainmenu_products_bi_title">Products</string>
    <string name="mainmenu_products_bi_bestseller">Best seller: %s</string>
    <string name="mainmenu_products_bi_manycount">%s products</string>
    <string name="mainmenu_products_bi_singlecount">%s product</string>
    <string name="mainmenu_customers_bi_title">Customers</string>
    <string name="mainmenu_customers_bi_newmany">%s new</string>
    <string name="mainmenu_customers_bi_newsingle">%s new</string>
    <string name="mainmenu_customers_bi_manycount">%s customers</string>
    <string name="mainmenu_customers_bi_singlecount">%s customer</string>


    <!-- Product List Fragment -->
    <string name="productlist_title">Products</string>

    <!-- Product Fragment -->
    <string name="product_title">Product</string>
    <string name="product_name_hint">Name</string>
    <string name="product_price_hint">Price</string>
    <string name="product_save_button">Save</string>
    <string name="product_inserted_successfully">Product was successfully inserted</string>
    <string name="product_updated_successfully">Product was successfully updated</string>
    <string name="product_error_to_insert">There was an error when inserting product</string>
    <string name="product_error_to_update">There was an error when updating product</string>

    <!-- Customer List Fragment -->
    <string name="customerlist_title">Customers</string>

    <!-- Customer Fragment -->
    <string name="customer_title">Customer</string>
    <string name="customer_name_hint">Name</string>
    <string name="customer_phone_hint">Phone</string>
    <string name="customer_save_button">Save</string>
    <string name="customer_inserted_successfully">Customer was successfully inserted</string>
    <string name="customer_updated_successfully">Customer was successfully updated</string>
    <string name="customer_error_to_insert">There was an error when inserting customer</string>
    <string name="customer_error_to_update">There was an error when updating customer</string>

    <!-- Order List Fragment -->
    <string name="orderlist_title">Orders</string>

    <!-- Order Fragment -->
    <string name="order_title">Order</string>
    <string name="order_customer_hint">Customer</string>
    <string name="order_product_hint">Product id</string>
    <string name="order_total_hint">Total</string>
    <string name="order_add_product_button">Add</string>
    <string name="order_save_button">Save</string>
    <string name="order_inserted_successfully">Order was successfully inserted</string>
    <string name="order_updated_successfully">Order was successfully updated</string>
    <string name="order_error_no_items">Enter at least one product</string>
    <string name="order_error_product_not_found">Product not found</string>
    <string name="order_error_to_insert">There was an error when inserting order</string>
    <string name="order_error_to_update">There was an error when updating order</string>


</resources>